# cool-scripts

./: .gitignore  AGENTS.md  README.md
agent-scripts/: Test-RepoPowerShellSyntax.ps1  Update-RepoIndex.ps1  _Common.ps1
ahk/: autoclick.ahk  obsidian.ahk  startup.ahk
ahk/autocorrect/: AutoCorrect_LogCore.ahk  AutoCorrect_Shorthand.ahk  AutoCorrect_Softer.ahk  AutoCorrect_Word.ahk  autocorrect.ahk
ahk/autorun/: autocorrect.ahk  capstoshift.ahk  google.ahk  no ralt.ahk  no rwin.ahk  obsidian.ahk  recyclebin.ahk  shorthand.ahk  softer.ahk  terminal.ahk
directory-opus/: AddToArchive.js  ChecksumSelected.js  CreateDatedFolder.js  ExtractHere.js  FlattenDirectory.js  GitActions.js  Go-WslResolved.ps1  NavigateSymlink.js  README.md  RevealInExplorer.js  Smart Compare.opusscriptinstall  compact-size-column.js  rename-no-duplicate-extension.js
games/: fallout2mods.ps1
linux/: wsl-shell-setup.sh
linux/photontoaster/: env.sh  generate_aliases.sh  pt-bench-startup  (+3 more)
longer/: actionshortcuts.ps1  quotes-default.txt  wintweaks.ps1  wsl-shell-setup.sh
notepad++/UnsavedDumpPlugin/: .gitignore  CMakeLists.txt  README.md
notepad++/UnsavedDumpPlugin/src/: UnsavedDumpPlugin.cpp
obsidian/: BetterLists.css  BetterRibbon.css  BetterTabs.css  Dashboard.css  EmojiAccentNavColorizing.css  LessSpaceAfterHeadings.css  NoVaultSwitcher.css
photontoaster/: .gitignore  README.md  aliases.sh  aliases.toml  config.toml.default  install  install.ps1  pt-config-read  pt-quote
powershell/: actionshortcuts.ps1  install.ps1  rainmeter.ps1  wget.ps1  wintweaks.ps1
shortps1/: install.ps1
(+391 files in other folders)
